[gd_scene load_steps=3 format=2]

[ext_resource path="res://world/utils/physics/interact/click/InteractClickbox.gd" type="Script" id=1]
[ext_resource path="res://ui/interact/InteractDialogueControl.tscn" type="PackedScene" id=3]

[node name="InteractClickbox" type="StaticBody2D"]
collision_layer = 128
collision_mask = 0
input_pickable = true
script = ExtResource( 1 )
json_path = "res://ui/interact/test_dialogue.json"
oneshot = true

[node name="ClickableArea" type="CollisionShape2D" parent="."]
modulate = Color( 0, 0.6, 0.701961, 0.419608 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InteractDialogueControl" parent="CanvasLayer" instance=ExtResource( 3 )]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -88.0
margin_top = 12.0
margin_right = -88.0
margin_bottom = 12.0

[connection signal="input_event" from="." to="." method="_on_InteractClickbox_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_InteractClickbox_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_InteractClickbox_mouse_exited"]
